# code-snippets-v4

./: .gitignore  .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.config/: .editorconfig
.github/: dependabot.yml
.github/linters/: .jscpd.json  zizmor.yaml
.github/workflows/: bandit.yaml  bearer.yaml  black.yaml  csharp-darwin-snippets.yaml  csharp-linux-snippets.yaml  csharp-windows-snippets.yaml  dependency-scan.yaml  dotnet-format.yaml  flake8.yaml  isort.yaml  java-darwin-snippets.yaml  java-linux-snippets.yaml  java-windows-snippets.yaml  maven-dependency-review.yaml  mypy.yaml  pylint.yaml  validate-csharp-dependabot-config.yaml
csharp/: GlobalSuppressions.md  README.md
csharp/runner/SnippetRunner/: GlobalSuppressions.cs  InstallLocations.cs  Program.cs  SnippetRunner.csproj
csharp/snippets/configuration/: README.md
csharp/snippets/configuration/AddDataSources/: AddDataSources.csproj  Program.cs
csharp/snippets/configuration/InitDefaultConfig/: Program.cs
csharp/snippets/configuration/RegisterDataSources/: Program.cs
csharp/snippets/deleting/: README.md
csharp/snippets/deleting/DeleteViaFutures/: DeleteViaFutures.csproj  Program.cs
csharp/snippets/deleting/DeleteViaLoop/: Program.cs
csharp/snippets/deleting/DeleteWithInfoViaFutures/: LimitedConcurrenyLevelTaskScheduler.cs  Program.cs
csharp/snippets/information/: README.md
csharp/snippets/information/CheckDatastorePerformance/: Program.cs
csharp/snippets/information/CheckRepositoryPerformance/: Program.cs
csharp/snippets/information/GetDatastoreInfo/: Program.cs
csharp/snippets/information/GetLicense/: Program.cs
csharp/snippets/information/GetRepositoryInfo/: Program.cs
csharp/snippets/information/GetVersion/: Program.cs
csharp/snippets/initialization/: README.md
csharp/snippets/initialization/EnginePriming/: Program.cs
csharp/snippets/initialization/EnvironmentAndHubs/: Program.cs
csharp/snippets/initialization/PurgeRepository/: Program.cs  PurgeRepository.csproj
csharp/snippets/loading/: README.md
csharp/snippets/loading/LoadRecords/: Program.cs
csharp/snippets/loading/LoadTruthSetWithInfoViaLoop/: Program.cs
csharp/snippets/loading/LoadViaFutures/: Program.cs
csharp/snippets/loading/LoadViaLoop/: Program.cs
csharp/snippets/loading/LoadViaQueue/: Program.cs
csharp/snippets/loading/LoadWithInfoViaFutures/: Program.cs
csharp/snippets/loading/LoadWithStatsViaLoop/: GlobalSuppressions.cs  Program.cs
csharp/snippets/redo/: README.md
csharp/snippets/redo/LoadWithRedoViaLoop/: LoadWithRedoViaLoop.csproj  Program.cs
csharp/snippets/redo/RedoContinuous/: Program.cs
csharp/snippets/redo/RedoContinuousViaFutures/: LimitedConcurrenyLevelTaskScheduler.cs  Program.cs
csharp/snippets/redo/RedoWithInfoContinuous/: Program.cs
csharp/snippets/searching/: README.md
csharp/snippets/searching/SearchRecords/: Program.cs
csharp/snippets/searching/SearchViaFutures/: Program.cs
csharp/snippets/stewardship/: README.md
csharp/snippets/stewardship/ForceResolve/: Program.cs
docs/: README.md
java/: README.md  checkstyle-suppressions.xml  pom.xml
java/snippets/configuration/: AddDataSources.java  InitDefaultConfig.java  README.md  RegisterDataSources.java
java/snippets/deleting/: DeleteViaFutures.java  DeleteViaLoop.java  DeleteWithInfoViaFutures.java  README.md
java/snippets/information/: CheckDatastorePerformance.java  CheckRepositoryPerformance.java  GetDatastoreInfo.java  GetLicense.java  GetRepositoryInfo.java  GetVersion.java  README.md
java/snippets/initialization/: EnginePriming.java  EnvironmentAndHubs.java  PurgeRepository.java  README.md
java/snippets/loading/: AddFutures.java  AddRecords.java  AddRecordsLoop.java  AddWithInfoFutures.java  LoadRecords.java  LoadTruthSetWithInfoViaLoop.java  LoadViaFutures.java  LoadViaLoop.java  LoadViaQueue.java  LoadWithInfoViaFutures.java  LoadWithStatsViaLoop.java  README.md
java/snippets/redo/: LoadWithRedoViaLoop.java  README.md  RedoContinuous.java  RedoContinuousViaFutures.java  RedoWithInfoContinuous.java
java/snippets/searching/: README.md  SearchRecords.java  SearchViaFutures.java
java/snippets/stewardship/: ForceResolve.java  ForceUnresolve.java  README.md
python/configuration/: README.md  add_data_sources.py  get_config_registry.py  get_data_source_registry.py  init_default_config.py  register_data_sources.py
python/deleting/: README.md  delete_futures.py  delete_loop.py  delete_with_info_futures.py
python/information/: README.md  check_datastore_performance.py  check_repository_performance.py  engine_flags.py  get_datastore_info.py  get_license.py  get_repository_info.py  get_stats.py  get_version.py
python/initialization/: README.md  abstract_factory.py  abstract_factory_parameters.py  abstract_factory_single_instance_only.py  abstract_factory_with_config_id.py  abstract_factory_with_debug.py  engine_priming.py  factory_and_engines.py  factory_destroy.py  g2_module_Ini_to_json.py  g2_module_ini_to_json.py  purge_repository.py  signal_handler.py  sz_engine_config_ini_to_json.py
python/loading/: README.md  add_futures.py  add_queue.py  add_records.py  add_records_loop.py  add_truthset_loop.py  add_with_info_futures.py
python/redo/: README.md  add_with_redo.py  redo_continuous.py  redo_continuous_futures.py  redo_with_info_continuous.py
python/replacing/: README.md
python/searching/: README.md  search_futures.py  search_records.py
python/stewardship/: README.md  force_resolve.py  force_unresolve.py
resources/output/: add_file_with_info.jsonl  delete_file_with_info.jsonl
(+14 files in other folders)
