[project]
name = "code-snippets-v4"
version = "1.2.8"
description = "Code snippets for Senzing V4"
authors = [{ name = "senzing", email = "support@senzing.com" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

[project.urls]
bugtracker = "https://github.com/senzing-garage/code-snippets-v4/issues"
changelog = "https://github.com/senzing-garage/code-snippets-v4/blob/main/CHANGELOG.md"
source = "https://github.com/senzing-garage/code-snippets-v4"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
all = [
  { include-group = "development" },
  { include-group = "lint" },
  { include-group = "test" },
]
development = [
  "build==1.3.0",
  "coverage==7.10.7",
  "cryptography==46.0.3",
  "psutil==7.1.1",
  "pytest-cov==7.0.0",
  "pytest-schema==0.1.2",
  "pytest==8.4.2",
  "twine==6.2.0",
  "virtualenv==20.34.0",
  "wheel==0.46.1",
]
lint = [
  "bandit==1.8.6",
  "black==25.9.0",
  "flake8==7.3.0",
  "fpvs==0.3.0",
  "isort==6.0.1",
  "mypy==1.18.2",
  "pylint==3.3.9",
  "pylint-per-file-ignores==2.0.3",
]
test = ["pytest==8.4.2", "coverage==7.10.7"]

[tool.setuptools]
package-dir = { "" = "python" }

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
src_paths = ["examples", "src", "tests"]

[[tool.mypy.overrides]]
module = "senzing_abstract.szengineflags.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = "true"

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
  "broad-except",
  "consider-using-f-string",
  "line-too-long",
  "missing-function-docstring",
  "missing-module-docstring",
  "protected-access",
  "too-many-branches",
  "too-many-locals",
]
good-names = ["code-snippets-v4"]
notes = ["FIXME"]
